--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/home.css">
     <!-- Fonts Ancient -->
     <title>ThinkER</title>
 </head>
 <body>
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="../CSS/home.css"></script>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -26,13 +26,66 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link" href="#">Escape Room</a>
+              <a class="nav-link" href="#">Ranking</a>
+              <a class="nav-link" href="#">Profile</a>
+              <a class="nav-link disabled">Admin</a>
             </div>
           </div>
         </div>
       </nav>
+      <!-- Main 1 -->
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <img src="../IMG/pdmaps-brlib-73-nam-b.jpg" class="img-fluid" width="800" height="900">
+          </div>
+          <div class="col" id="texto">
+            <h3>Conheça ThinkER</h3>
+            <h5>Thinker é o escape room online com o objetivo de o jogador testar os seus conhecimentos da obra “Auto da Barca do Inferno” de Gil Vicente em teste.</h5>
+            <h5>Os jogadores terão de responder corretamente cada questão presente sobre cada personagem da obra, ao concluir todas as perguntas dessa personagem, este recebe um item de finalização e passa para a próxima fase.</h5>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <!-- <div style="background-image: url(../IMG/bege-envelhecido-fundo\ 2.png)"> -->
+        <!-- Main 2 -->
+        <div class="container text-center">
+          <div class="row row-cols-2">
+            <div class="col21">
+              <h4>Ranking</h4>
+              <h5>Acaba o Escape Room o mais depressa possível para chegares ao topo do Ranking!</h5>
+            </div>
+            <div class="col22">
+              <h4>Badges</h4>
+              <h5>Coleciona badges ao cumprires os requisitos correspondentes e usa os nos teu perfil.</h5>
+            </div>
+            <div class="col23">
+              <h4>História</h4>
+              <h5>O “Auto da Barca de Inferno” é uma obra de Gil Vicente.</h5>
+              <h5>A peça é uma alegoria que representa uma viagem de barco ao além, onde os personagens são julgados por suas ações em vida e são encaminhados para a barca do inferno ou a barca do céu.</h5>
+            </div>
+            <div class="col24">
+              <h4>Tempo</h4>
+              <h5>Sê rápido/a! Quando mais rápido/a fores ao responderes às perguntas corretamente, sobes no ranking e sê glorificado pelo teu conhecimento.</h5>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <!-- Footer -->
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+              <img src="../IMG/Background.png" class="img-fluid" width="800" height="900">
+            </div>
+            <div class="col-6">
+              2 of 3 (wider)
+            </div>
+            <div class="col">
+              <img src="../IMG/vintage-angel-with-child-illustration_53876-87327.avif" class="img-fluid" width="800" height="900">
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
