User e Modal Log

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -26,10 +26,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#">Escape Room</a>
-              <a class="nav-link" href="#">Ranking</a>
-              <a class="nav-link" href="#">Profile</a>
-              <a class="nav-link disabled">Admin</a>
+              <a class="nav-link" href="EscapeRoom.html">Escape Room</a>
+              <a class="nav-link" href="Ranking.html">Ranking</a>
+              <a class="nav-link" href="Profile.html">Profile</a>
+              <a class="nav-link disabled" href="Admin.html">Admin</a>
             </div>
           </div>
         </div>
@@ -79,10 +79,33 @@
               <img src="../IMG/Background.png" class="img-fluid" width="800" height="900">
             </div>
             <div class="col-6">
-              2 of 3 (wider)
+              <h1>ThinkER</h1>
             </div>
             <div class="col">
               <img src="../IMG/vintage-angel-with-child-illustration_53876-87327.avif" class="img-fluid" width="800" height="900">
+            </div>
+          </div>
+        </div>
+        <!-- Modal Log In-->
+        <div id="modalLog" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Log In</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="recipient-name" class="col-form-label">Recipient:</label>
+                    <input type="text" class="form-control" id="recipient-name">
+                  </div>
+                  <div class="mb-3">
+                    <label for="message-text" class="col-form-label">Message:</label>
+                    <textarea class="form-control" id="message-text"></textarea>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
