--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -17,6 +17,7 @@
 <body>
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="../JAVASCRIPT/VIEW/loginView.js"></script>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -28,7 +29,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="EscapeRoom.html">Escape Room</a>
               <a class="nav-link" href="Ranking.html">Ranking</a>
-              <a class="nav-link" href="Profile.html">Profile</a>
+              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal" href="Profile.html">Perfil</a>
               <a class="nav-link disabled" href="Admin.html">Admin</a>
             </div>
           </div>
@@ -86,29 +87,56 @@
             </div>
           </div>
         </div>
-        <!-- Modal Log In-->
-        <div id="modalLog" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Log In</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <form>
-                  <div class="mb-3">
-                    <label for="recipient-name" class="col-form-label">Recipient:</label>
-                    <input type="text" class="form-control" id="recipient-name">
+          <!-- Modal Log In-->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Log In</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email</label>
                   </div>
-                  <div class="mb-3">
-                    <label for="message-text" class="col-form-label">Message:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
+                  <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Palavra-Passe</label>
                   </div>
-                </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Sign Up</button>
+                  <button type="button" class="btn btn-primary">Entrar</button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+          <!-- Modal Log In-->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Log In</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email</label>
+                  </div>
+                  <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Palavra-Passe</label>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Sign Up</button>
+                  <button type="button" class="btn btn-primary">Entrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
 </body>
 </html>
