--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -18,6 +18,7 @@
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="../JAVASCRIPT/VIEW/loginView.js"></script>
+    <script src="../JAVASCRIPT/VIEW/signupView.js"></script>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -29,7 +30,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="EscapeRoom.html">Escape Room</a>
               <a class="nav-link" href="Ranking.html">Ranking</a>
-              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModal" href="Profile.html">Perfil</a>
+              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogIn">Perfil</a>
               <a class="nav-link disabled" href="Admin.html">Admin</a>
             </div>
           </div>
@@ -113,7 +114,7 @@
             </div>
           </div>
           <!-- Modal Log In-->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="modalLogIn" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
@@ -122,17 +123,50 @@
                 </div>
                 <div class="modal-body">
                   <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email</label>
+                    <input type="email" class="form-control" id="emailLI" placeholder="name@example.com">
+                    <label for="emailLI">Email</label>
                   </div>
                   <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Palavra-Passe</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password">
+                    <label for="password">Palavra-Passe</label>
                   </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-primary">Sign Up</button>
-                  <button type="button" class="btn btn-primary">Entrar</button>
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalSignUp">Sign Up</button>
+                  <button type="button" class="btn btn-primary" id="confirmarLogIn">Entrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Modal Sign Up-->
+          <div class="modal fade" id="modalSignUp" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Sign Up</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="form-floating mb-3">
+                    <input type="name" class="form-control" id="name" placeholder="Nome">
+                    <label for="name">Nome</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="emailSU" placeholder="name@example.com">
+                    <label for="emailSU">Email</label>
+                  </div>
+                  <div class="form-floating">
+                    <input type="password" class="form-control" id="password1" placeholder="Password">
+                    <label for="password1">Palavra-Passe</label>
+                  </div>
+                  <div class="form-floating">
+                    <input type="password" class="form-control" id="password2" placeholder="Password">
+                    <label for="password2">Confirme a Palavra-Passe</label>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalLogIn">Log In</button>
+                  <button type="button" class="btn btn-primary" id="confirmarSignUp">Entrar</button>
                 </div>
               </div>
             </div>
